--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-langchain==0.3.0
-langchain-openai==0.1.7
-openai==1.52.1
-tiktoken==0.7.0
-python-dotenv==1.0.1
-pydantic==2.8.2
+langchain-core==0.3.33
+langchain-openai==0.3.3
+langchain-community==0.3.16
