--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -24,6 +24,7 @@
 
 # Linux/WSL: sudo apt install ffmpeg -y
 
+webrtcvad==2.0.10
 faster-whisper==1.0.3
-sounddevice==0.4.7
+pyaudio==0.2.14
 numpy==1.26.4
